# burn-rate-monitor

./: pyproject.toml
docs/01_需求文档/: 需求文档.md
docs/02_架构设计文档/: 架构设计.md
docs/03_概要设计文档/: 概要设计.md
docs/04_详细设计文档/: 详细设计.md
src/brmonitor/: __init__.py  calculator.py  config.py  data_loader.py  server.py
src/brmonitor/public/: index.html
